fix: resolve SonarQube Creedengo code smells and other java warnings